objects/FMS_Control_Table__c.object
<CustomObject>
    <fields>
        <fullName>Controlling_Field_1_API__c</fullName>
        <label>Controlling Field 1 API</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Controlling_Field_1_Value__c</fullName>
        <label>Controlling Field 1 Value</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dependent_Field_1_API__c</fullName>
        <label>Dependent Field 1 API</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dependent_Field_1_Value__c</fullName>
        <label>Dependent Field 1 Value</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Variable Mapping</fullName>
                </value>
                <value>
                    <fullName>Field Hierarchy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_Form__c</fullName>
        <label>Type of Form</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Main</fullName>
                </value>
                <value>
                    <fullName>IMC</fullName>
                </value>
                <value>
                    <fullName>DDR</fullName>
                </value>
                <value>
                    <fullName>RIT</fullName>
                </value>
                <value>
                    <fullName>SP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>FMS Control Table</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Controlling_Field_1_API__c</columns>
        <columns>Dependent_Field_1_API__c</columns>
        <columns>Type_of_Form__c</columns>
        <columns>Level__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>DDR_Form_Field_Hierarchy</fullName>
        <columns>NAME</columns>
        <columns>Controlling_Field_1_API__c</columns>
        <columns>Dependent_Field_1_API__c</columns>
        <columns>Level__c</columns>
        <columns>Type__c</columns>
        <columns>Type_of_Form__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type_of_Form__c</field>
            <operation>equals</operation>
            <value>DDR</value>
        </filters>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Field Hierarchy</value>
        </filters>
        <label>DDR Form- Field Hierarchy</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>IMC_Form_Field_Hierarchy</fullName>
        <columns>NAME</columns>
        <columns>Controlling_Field_1_API__c</columns>
        <columns>Dependent_Field_1_API__c</columns>
        <columns>Level__c</columns>
        <columns>Type__c</columns>
        <columns>Type_of_Form__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type_of_Form__c</field>
            <operation>equals</operation>
            <value>IMC</value>
        </filters>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Field Hierarchy</value>
        </filters>
        <label>IMC Form- Field Hierarchy</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Main_Form_Field_Hierarchy</fullName>
        <columns>NAME</columns>
        <columns>Controlling_Field_1_API__c</columns>
        <columns>Dependent_Field_1_API__c</columns>
        <columns>Level__c</columns>
        <columns>Type__c</columns>
        <columns>Type_of_Form__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type_of_Form__c</field>
            <operation>equals</operation>
            <value>Main</value>
        </filters>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Field Hierarchy</value>
        </filters>
        <label>Main Form- Field Hierarchy</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>RIT_Form_Field_Hierarchy</fullName>
        <columns>NAME</columns>
        <columns>Controlling_Field_1_API__c</columns>
        <columns>Dependent_Field_1_API__c</columns>
        <columns>Level__c</columns>
        <columns>Type__c</columns>
        <columns>Type_of_Form__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type_of_Form__c</field>
            <operation>equals</operation>
            <value>RIT</value>
        </filters>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Field Hierarchy</value>
        </filters>
        <label>RIT Form- Field Hierarchy</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>SP_Form_Field_Hierarchy</fullName>
        <columns>NAME</columns>
        <columns>Controlling_Field_1_API__c</columns>
        <columns>Dependent_Field_1_API__c</columns>
        <columns>Level__c</columns>
        <columns>Type__c</columns>
        <columns>Type_of_Form__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type_of_Form__c</field>
            <operation>equals</operation>
            <value>SP</value>
        </filters>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Field Hierarchy</value>
        </filters>
        <label>SP Form- Field Hierarchy</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Variable_mapping</fullName>
        <columns>NAME</columns>
        <columns>Controlling_Field_1_API__c</columns>
        <columns>Controlling_Field_1_Value__c</columns>
        <columns>Type__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Variable Mapping</value>
        </filters>
        <label>Variable mapping</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>R-{0000}</displayFormat>
        <label>FMS Control Table Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FMS Control Table</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>